[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-positions"
version = "0.1.0"
description = "Database-backed position tracking and accounting service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "bottle>=0.13",
    "psycopg[binary]>=3.1",
    "SQLAlchemy>=2.0",
    "waitress>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "webtest>=3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
